--- a/Python SEARCH.ipynb
+++ b/Python SEARCH.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# `Notebook search for a chunk of code`  \n",
+    "# `Searching Notebooks for a Code Snippet`  \n",
     "From September 2022 I started learning Python online.\n",
     "Until everything is settled in my head,  \n",
     "I am faced with the need to search for my own code snippets among all this variety of information.  \n",
