--- a/Netology Pandas_basics.ipynb
+++ b/Netology Pandas_basics.ipynb
@@ -81,38 +81,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting pandasql\n",
-      "  Downloading pandasql-0.7.3.tar.gz (26 kB)\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hRequirement already satisfied: numpy in /Users/velo1/opt/anaconda3/lib/python3.10/site-packages (from pandasql) (1.23.5)\n",
+      "Requirement already satisfied: pandasql in /Users/velo1/opt/anaconda3/lib/python3.10/site-packages (0.7.3)\n",
       "Requirement already satisfied: pandas in /Users/velo1/opt/anaconda3/lib/python3.10/site-packages (from pandasql) (1.4.4)\n",
-      "Collecting sqlalchemy\n",
-      "  Downloading SQLAlchemy-1.4.46.tar.gz (8.5 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8.5/8.5 MB\u001b[0m \u001b[31m1.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m0m\n",
-      "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hRequirement already satisfied: python-dateutil>=2.8.1 in /Users/velo1/opt/anaconda3/lib/python3.10/site-packages (from pandas->pandasql) (2.8.2)\n",
+      "Requirement already satisfied: numpy in /Users/velo1/opt/anaconda3/lib/python3.10/site-packages (from pandasql) (1.23.5)\n",
+      "Requirement already satisfied: sqlalchemy in /Users/velo1/opt/anaconda3/lib/python3.10/site-packages (from pandasql) (1.4.46)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/velo1/opt/anaconda3/lib/python3.10/site-packages (from pandas->pandasql) (2.8.2)\n",
       "Requirement already satisfied: pytz>=2020.1 in /Users/velo1/opt/anaconda3/lib/python3.10/site-packages (from pandas->pandasql) (2022.7)\n",
-      "Collecting greenlet!=0.4.17\n",
-      "  Downloading greenlet-2.0.1-cp310-cp310-macosx_10_15_x86_64.whl (203 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m203.7/203.7 kB\u001b[0m \u001b[31m1.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: six>=1.5 in /Users/velo1/opt/anaconda3/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas->pandasql) (1.16.0)\n",
-      "Building wheels for collected packages: pandasql, sqlalchemy\n",
-      "  Building wheel for pandasql (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for pandasql: filename=pandasql-0.7.3-py3-none-any.whl size=26768 sha256=2c316959bbdd539b21660ee05c02c3a270f9e4a3b34a0df2f8d41bfb2bbf2dc2\n",
-      "  Stored in directory: /Users/velo1/Library/Caches/pip/wheels/4c/a4/ce/ad31f7d9f6bfce32741955de12e76e3a6e7181c20321db3c66\n",
-      "  Building wheel for sqlalchemy (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for sqlalchemy: filename=SQLAlchemy-1.4.46-cp310-cp310-macosx_10_9_x86_64.whl size=1559968 sha256=89ad856b47ca969177ef49c7da4874b85f904386218b72e8009e956f58a743ec\n",
-      "  Stored in directory: /Users/velo1/Library/Caches/pip/wheels/2f/63/e7/5e8ba3d4d6a5f4ecd42c07063066ff329262da068628c41c6f\n",
-      "Successfully built pandasql sqlalchemy\n",
-      "Installing collected packages: greenlet, sqlalchemy, pandasql\n",
-      "Successfully installed greenlet-2.0.1 pandasql-0.7.3 sqlalchemy-1.4.46\n"
+      "Requirement already satisfied: greenlet!=0.4.17 in /Users/velo1/opt/anaconda3/lib/python3.10/site-packages (from sqlalchemy->pandasql) (2.0.1)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/velo1/opt/anaconda3/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas->pandasql) (1.16.0)\n"
      ]
     },
     {
@@ -141,7 +124,7 @@
       "\u001b[0;31mOperationalError\u001b[0m: (sqlite3.OperationalError) no such table: df\n[SQL: select * from df]\n(Background on this error at: https://sqlalche.me/e/14/e3q8)",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[0;31mPandaSQLException\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m get_ipython()\u001b[39m.\u001b[39msystem(\u001b[39m'\u001b[39m\u001b[39mpip install pandasql\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpandasql\u001b[39;00m \u001b[39mimport\u001b[39;00m sqldf\n\u001b[0;32m----> 4\u001b[0m output \u001b[39m=\u001b[39m sqldf(\u001b[39m\"\u001b[39;49m\u001b[39mselect * from df\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
+      "Cell \u001b[0;32mIn[1], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m get_ipython()\u001b[39m.\u001b[39msystem(\u001b[39m'\u001b[39m\u001b[39mpip install pandasql\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpandasql\u001b[39;00m \u001b[39mimport\u001b[39;00m sqldf\n\u001b[0;32m----> 4\u001b[0m output \u001b[39m=\u001b[39m sqldf(\u001b[39m\"\u001b[39;49m\u001b[39mselect * from df\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
       "File \u001b[0;32m~/opt/anaconda3/lib/python3.10/site-packages/pandasql/sqldf.py:156\u001b[0m, in \u001b[0;36msqldf\u001b[0;34m(query, env, db_uri)\u001b[0m\n\u001b[1;32m    124\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msqldf\u001b[39m(query, env\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, db_uri\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39msqlite:///:memory:\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[1;32m    125\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    126\u001b[0m \u001b[39m    Query pandas data frames using sql syntax\u001b[39;00m\n\u001b[1;32m    127\u001b[0m \u001b[39m    This function is meant for backward compatibility only. New users are encouraged to use the PandaSQL class.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    154\u001b[0m \u001b[39m    >>> sqldf(\"select avg(x) from df;\", locals())\u001b[39;00m\n\u001b[1;32m    155\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 156\u001b[0m     \u001b[39mreturn\u001b[39;00m PandaSQL(db_uri)(query, env)\n",
       "File \u001b[0;32m~/opt/anaconda3/lib/python3.10/site-packages/pandasql/sqldf.py:63\u001b[0m, in \u001b[0;36mPandaSQL.__call__\u001b[0;34m(self, query, env)\u001b[0m\n\u001b[1;32m     61\u001b[0m     result \u001b[39m=\u001b[39m read_sql(query, conn)\n\u001b[1;32m     62\u001b[0m \u001b[39mexcept\u001b[39;00m DatabaseError \u001b[39mas\u001b[39;00m ex:\n\u001b[0;32m---> 63\u001b[0m     \u001b[39mraise\u001b[39;00m PandaSQLException(ex)\n\u001b[1;32m     64\u001b[0m \u001b[39mexcept\u001b[39;00m ResourceClosedError:\n\u001b[1;32m     65\u001b[0m     \u001b[39m# query returns nothing\u001b[39;00m\n\u001b[1;32m     66\u001b[0m     result \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
       "\u001b[0;31mPandaSQLException\u001b[0m: (sqlite3.OperationalError) no such table: df\n[SQL: select * from df]\n(Background on this error at: https://sqlalche.me/e/14/e3q8)"
@@ -609,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -856,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -1118,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -1212,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1271,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1498,7 +1481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 (main, Nov 24 2022, 08:09:04) [Clang 14.0.6 ]"
   },
   "vscode": {
    "interpreter": {
