--- a/math_sympy.ipynb
+++ b/math_sympy.ipynb
@@ -345,7 +345,15 @@
    ],
    "source": [
     "y = Function('y')\n",
-    "dsolve(Eq(y(t).diff(t, t) - y(t), exp(t)), y(t))"
+    "dsolve(Eq(y(t).diff(t, t) - y(t), exp(t)), y(t))\n",
+    "# The \"dsolve\" function is called with two arguments: the differential equation and \n",
+    "# the dependent variable \"y(t)\". The \"dsolve\" function returns the general solution to the \n",
+    "# differential equation, which can be displayed using the \"print\" function.\n",
+    "\n",
+    "# The output of the code is the general solution to the differential equation, which is \n",
+    "# expressed in terms of unknown functions and constants. To find the specific solution for \n",
+    "# a particular set of initial conditions, we would need to substitute specific values for \n",
+    "# these unknowns and constants."
    ]
   },
   {
@@ -831,7 +839,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 (main, Nov 24 2022, 08:09:04) [Clang 14.0.6 ]"
   },
   "vscode": {
    "interpreter": {
