--- a/Netology_stats_Power_Min_sample_size_HW.ipynb
+++ b/Netology_stats_Power_Min_sample_size_HW.ipynb
@@ -200,7 +200,8 @@
     "    \n",
     "    if daily_data_control.mean() > threshold:\n",
     "        n_positive += 1\n",
-    "print(f'The power of the stat test = {n_positive / total_trials:.05f}') # FPR - because daily_data_control.mean() > threshold    \n",
+    "print(f'The power of the stat test = {n_positive / total_trials:.05f}') \n",
+    "# FPR - because daily_data_control.mean() > threshold    \n",
     "# in our case (1 - 0.9) / 2 = 5 %"
    ]
   },
