--- a/Python_SQL.ipynb
+++ b/Python_SQL.ipynb
@@ -215,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (main, Dec 23 2022, 09:39:26) [Clang 14.0.0 (clang-1400.0.29.202)]"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
