--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -136,85 +136,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Looking for: ['power'] in ../**/*.ipynb files\n",
-      "Incl. all occurrences: True\n",
-      "Case sensitive: False\n",
-      "File:                                                 : Search result:\n",
-      "................................................................................\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/../Netlogy/Netology_Pandas_functions_groupby.ipynb    : power_up': 'mean'})[\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/../Netlogy/Netology_Python_FILES_Read_Write_and_pip_JSON.ipynb    : power.csv\\t\\\\\\\\che-d\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/../Netlogy/Netology_stats_case_study_Darwinbooks_recommend.ipynb    : power',\\n\",\" 'let',\\\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/../Netlogy/Netology_Pandas_PIVOT_and_PYMYSTEM.ipynb    : power.csv\\t\\\\\\\\che-d\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/../Netlogy/SEARCH.ipynb                               : power'] in ../**/*.i\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/../Netlogy/Python_SQL.ipynb                           : power.csv\\\"\\n\",\n",
-      "    \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/../Netlogy/Netology_Pandas_JOIN_SQL_HW_.ipynb         : power.csv\\n\",\n",
-      "      \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/../Netlogy/math_sympy.ipynb                           : power SymPy\"\n",
-      "   ]\n",
-      "  \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/../Netlogy/Netology_Pandas_basics.ipynb               : power.csv')\\n\",\n",
-      "    \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/../Netlogy/Netology_stats_A_B_testing_HW.ipynb        : power of pokemon')\\n\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/../Netlogy/NETOLOGY_PySpark_Лекция_7.ipynb            : power_iteration_clus\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/../Netlogy/Netology_stats_Case_study_HW.ipynb         : power, precision) = \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/../Netlogy/bash.ipynb                                 : power\\n\",\"!echo \\\"pr\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/../Netlogy/ABD_22_Total_HW.ipynb                      : powerIterationCluste\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/../Netlogy/Netology_stats_Case_Power_MinSampleSize_HW.ipynb    : power as smp\"\n",
-      "   ]\n",
-      " \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/../Netlogy/Netology_stats_Power_Min_sample_size_W.ipynb    : power as smp\"\n",
-      "   ]\n",
-      " \n"
-     ]
-    }
-   ],
    "source": [
-    "import glob\n",
-    "\n",
-    "# Search pattern: one level up in the directory hierarchy\n",
-    "pattern = '../**/*.ipynb'\n",
-    "\n",
-    "# Search logic: All occurrences must be found\n",
-    "all_occurs = True\n",
-    "\n",
-    "# Case sensitive search\n",
-    "case_sens = False\n",
-    "\n",
-    "# Result length\n",
-    "res_length = 20\n",
-    "\n",
-    "# Search strings\n",
-    "# inq = ['kwarg', 'arg']\n",
-    "inq = input('Input search strings separated by whitespace:').split()\n",
-    "dir_path = os.getcwd()\n",
-    "# Print search information\n",
-    "print(f'Looking for: {inq} in {pattern} files')\n",
-    "print(f'Incl. all occurrences: {all_occurs}')\n",
-    "print(f'Case sensitive: {case_sens}')\n",
-    "print('File:', \" \"*47, ': Search result:')\n",
-    "print('.'*80)\n",
-    "\n",
-    "# Use a generator expression to reduce memory usage\n",
-    "for filepath in (f for f in glob.iglob(pattern, recursive=True) if any(inq_str in open(f, encoding='UTF-8').read() for inq_str in inq)):\n",
-    "    with open(filepath, encoding='UTF-8') as file:\n",
-    "        s = file.read()\n",
-    "\n",
-    "        # Use a list comprehension to reduce code duplication\n",
-    "        chunks = [s[s.find(search_str) : s.find(search_str) + res_length] for search_str in inq if case_sens and search_str in s or not case_sens and search_str.lower() in s.lower()]\n",
-    "\n",
-    "        # Concatenate the chunks and print the result if any chunks were found\n",
-    "        if chunks:\n",
-    "            chunk = ', '.join(chunks)\n",
-    "            print(dir_path + '/' + filepath.ljust(50), ' '*3 + ':', chunk)\n"
+    "#### `Renaming files in a folder`"
    ]
   },
   {
@@ -235,10 +161,11 @@
     "        # rename() function will rename all the files \n",
     "        os.rename(src, dst)\n",
     "\n",
-    "# replace \"path/to/dir\" with the path to the directory you want to rename files in\n",
+    "\n",
     "# rename_files_in_dir(\"path/to/dir\")\n",
     "\n",
-    "rename_files_in_dir(os.getcwd())"
+    "# rename all files in current folder\n",
+    "rename_files_in_dir( os.getcwd() )"
    ]
   }
  ],
