Netology_math_LA_HW_7

--- a/Netology_math_LA_HW_7.ipynb
+++ b/Netology_math_LA_HW_7.ipynb
@@ -33,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "p2gC3FEFnY08"
       },
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -72,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -86,7 +86,7 @@
               "       x: array([-6.67985667e-10, -1.60629510e-09])"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -107,7 +107,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "id": "yL8ITujuFu0M"
       },
@@ -127,81 +127,6 @@
         "        else:\n",
         "            lstats[strat].append(0)\n",
         "df= pd.DataFrame(lstats)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 5,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>best1bin</th>\n",
-              "      <th>rand1exp</th>\n",
-              "      <th>randtobest1exp</th>\n",
-              "      <th>currenttobest1exp</th>\n",
-              "      <th>best2exp</th>\n",
-              "      <th>rand2exp</th>\n",
-              "      <th>randtobest1bin</th>\n",
-              "      <th>currenttobest1bin</th>\n",
-              "      <th>best2bin</th>\n",
-              "      <th>rand2bin</th>\n",
-              "      <th>rand1bin</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>49</td>\n",
-              "      <td>137</td>\n",
-              "      <td>90</td>\n",
-              "      <td>96</td>\n",
-              "      <td>133</td>\n",
-              "      <td>196</td>\n",
-              "      <td>57</td>\n",
-              "      <td>66</td>\n",
-              "      <td>90</td>\n",
-              "      <td>127</td>\n",
-              "      <td>92</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "   best1bin  rand1exp  randtobest1exp  currenttobest1exp  best2exp  rand2exp  \\\n",
-              "0        49       137              90                 96       133       196   \n",
-              "\n",
-              "   randtobest1bin  currenttobest1bin  best2bin  rand2bin  rand1bin  \n",
-              "0              57                 66        90       127        92  "
-            ]
-          },
-          "execution_count": 5,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "df"
       ]
     },
     {
@@ -1448,7 +1373,7 @@
                   "marker": {
                     "symbol": "circle"
                   },
-                  "mode": "text+lines+markers",
+                  "mode": "lines+markers+text",
                   "name": "",
                   "orientation": "v",
                   "showlegend": false,
@@ -2435,7 +2360,7 @@
                   "marker": {
                     "symbol": "circle"
                   },
-                  "mode": "text+lines+markers",
+                  "mode": "lines+markers+text",
                   "name": "",
                   "orientation": "v",
                   "showlegend": false,
