--- a/Netology_Pandas_JOIN.ipynb
+++ b/Netology_Pandas_JOIN.ipynb
@@ -886,7 +886,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 64-bit (microsoft store)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -904,7 +904,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "62904c1132972672803069004015d497d78640672cb35a40da7f1355a4c1bbc5"
+    "hash": "3f0fc0265faf3f010b6ea13d4d06fa8f6d9bd8f9a0a69886dc52220c62e8c74f"
    }
   }
  },
