--- a/Netology_stats_Case_study_HW.ipynb
+++ b/Netology_stats_Case_study_HW.ipynb
@@ -920,62 +920,70 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/qw/qq8zb5hx0w9cgzgkf9_v2sh00000gq/T/ipykernel_75280/2732066028.py:1: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "  df.groupby('Genre').mean().sort_values(by='Critic_Score',ascending= False).style.bar(align='left',color='yellow')\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_6c1b7_row0_col0 {\n",
+       "#T_839d5_row0_col0 {\n",
        "  width: 10em;\n",
        "  background: linear-gradient(90deg, yellow 100.0%, transparent 100.0%);\n",
        "}\n",
-       "#T_6c1b7_row1_col0 {\n",
+       "#T_839d5_row1_col0 {\n",
        "  width: 10em;\n",
        "  background: linear-gradient(90deg, yellow 92.3%, transparent 92.3%);\n",
        "}\n",
-       "#T_6c1b7_row2_col0 {\n",
+       "#T_839d5_row2_col0 {\n",
        "  width: 10em;\n",
        "  background: linear-gradient(90deg, yellow 90.7%, transparent 90.7%);\n",
        "}\n",
-       "#T_6c1b7_row3_col0 {\n",
+       "#T_839d5_row3_col0 {\n",
        "  width: 10em;\n",
        "  background: linear-gradient(90deg, yellow 66.2%, transparent 66.2%);\n",
        "}\n",
-       "#T_6c1b7_row4_col0 {\n",
+       "#T_839d5_row4_col0 {\n",
        "  width: 10em;\n",
        "  background: linear-gradient(90deg, yellow 53.1%, transparent 53.1%);\n",
        "}\n",
-       "#T_6c1b7_row5_col0 {\n",
+       "#T_839d5_row5_col0 {\n",
        "  width: 10em;\n",
        "  background: linear-gradient(90deg, yellow 44.9%, transparent 44.9%);\n",
        "}\n",
-       "#T_6c1b7_row6_col0 {\n",
+       "#T_839d5_row6_col0 {\n",
        "  width: 10em;\n",
        "  background: linear-gradient(90deg, yellow 37.2%, transparent 37.2%);\n",
        "}\n",
-       "#T_6c1b7_row7_col0 {\n",
+       "#T_839d5_row7_col0 {\n",
        "  width: 10em;\n",
        "  background: linear-gradient(90deg, yellow 36.0%, transparent 36.0%);\n",
        "}\n",
-       "#T_6c1b7_row8_col0 {\n",
+       "#T_839d5_row8_col0 {\n",
        "  width: 10em;\n",
        "  background: linear-gradient(90deg, yellow 28.6%, transparent 28.6%);\n",
        "}\n",
-       "#T_6c1b7_row9_col0 {\n",
+       "#T_839d5_row9_col0 {\n",
        "  width: 10em;\n",
        "  background: linear-gradient(90deg, yellow 17.7%, transparent 17.7%);\n",
        "}\n",
-       "#T_6c1b7_row10_col0 {\n",
+       "#T_839d5_row10_col0 {\n",
        "  width: 10em;\n",
        "  background: linear-gradient(90deg, yellow 17.6%, transparent 17.6%);\n",
        "}\n",
-       "#T_6c1b7_row11_col0 {\n",
+       "#T_839d5_row11_col0 {\n",
        "  width: 10em;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_6c1b7\">\n",
+       "<table id=\"T_839d5\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_6c1b7_level0_col0\" class=\"col_heading level0 col0\" >Critic_Score</th>\n",
+       "      <th id=\"T_839d5_level0_col0\" class=\"col_heading level0 col0\" >Critic_Score</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >Genre</th>\n",
@@ -984,58 +992,58 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_6c1b7_level0_row0\" class=\"row_heading level0 row0\" >Role-Playing</th>\n",
-       "      <td id=\"T_6c1b7_row0_col0\" class=\"data row0 col0\" >72.652646</td>\n",
+       "      <th id=\"T_839d5_level0_row0\" class=\"row_heading level0 row0\" >Role-Playing</th>\n",
+       "      <td id=\"T_839d5_row0_col0\" class=\"data row0 col0\" >72.652646</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6c1b7_level0_row1\" class=\"row_heading level0 row1\" >Strategy</th>\n",
-       "      <td id=\"T_6c1b7_row1_col0\" class=\"data row1 col0\" >72.086093</td>\n",
+       "      <th id=\"T_839d5_level0_row1\" class=\"row_heading level0 row1\" >Strategy</th>\n",
+       "      <td id=\"T_839d5_row1_col0\" class=\"data row1 col0\" >72.086093</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6c1b7_level0_row2\" class=\"row_heading level0 row2\" >Sports</th>\n",
-       "      <td id=\"T_6c1b7_row2_col0\" class=\"data row2 col0\" >71.968174</td>\n",
+       "      <th id=\"T_839d5_level0_row2\" class=\"row_heading level0 row2\" >Sports</th>\n",
+       "      <td id=\"T_839d5_row2_col0\" class=\"data row2 col0\" >71.968174</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6c1b7_level0_row3\" class=\"row_heading level0 row3\" >Shooter</th>\n",
-       "      <td id=\"T_6c1b7_row3_col0\" class=\"data row3 col0\" >70.181144</td>\n",
+       "      <th id=\"T_839d5_level0_row3\" class=\"row_heading level0 row3\" >Shooter</th>\n",
+       "      <td id=\"T_839d5_row3_col0\" class=\"data row3 col0\" >70.181144</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6c1b7_level0_row4\" class=\"row_heading level0 row4\" >Fighting</th>\n",
-       "      <td id=\"T_6c1b7_row4_col0\" class=\"data row4 col0\" >69.217604</td>\n",
+       "      <th id=\"T_839d5_level0_row4\" class=\"row_heading level0 row4\" >Fighting</th>\n",
+       "      <td id=\"T_839d5_row4_col0\" class=\"data row4 col0\" >69.217604</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6c1b7_level0_row5\" class=\"row_heading level0 row5\" >Simulation</th>\n",
-       "      <td id=\"T_6c1b7_row5_col0\" class=\"data row5 col0\" >68.619318</td>\n",
+       "      <th id=\"T_839d5_level0_row5\" class=\"row_heading level0 row5\" >Simulation</th>\n",
+       "      <td id=\"T_839d5_row5_col0\" class=\"data row5 col0\" >68.619318</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6c1b7_level0_row6\" class=\"row_heading level0 row6\" >Platform</th>\n",
-       "      <td id=\"T_6c1b7_row6_col0\" class=\"data row6 col0\" >68.058350</td>\n",
+       "      <th id=\"T_839d5_level0_row6\" class=\"row_heading level0 row6\" >Platform</th>\n",
+       "      <td id=\"T_839d5_row6_col0\" class=\"data row6 col0\" >68.058350</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6c1b7_level0_row7\" class=\"row_heading level0 row7\" >Racing</th>\n",
-       "      <td id=\"T_6c1b7_row7_col0\" class=\"data row7 col0\" >67.963612</td>\n",
+       "      <th id=\"T_839d5_level0_row7\" class=\"row_heading level0 row7\" >Racing</th>\n",
+       "      <td id=\"T_839d5_row7_col0\" class=\"data row7 col0\" >67.963612</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6c1b7_level0_row8\" class=\"row_heading level0 row8\" >Puzzle</th>\n",
-       "      <td id=\"T_6c1b7_row8_col0\" class=\"data row8 col0\" >67.424107</td>\n",
+       "      <th id=\"T_839d5_level0_row8\" class=\"row_heading level0 row8\" >Puzzle</th>\n",
+       "      <td id=\"T_839d5_row8_col0\" class=\"data row8 col0\" >67.424107</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6c1b7_level0_row9\" class=\"row_heading level0 row9\" >Action</th>\n",
-       "      <td id=\"T_6c1b7_row9_col0\" class=\"data row9 col0\" >66.629101</td>\n",
+       "      <th id=\"T_839d5_level0_row9\" class=\"row_heading level0 row9\" >Action</th>\n",
+       "      <td id=\"T_839d5_row9_col0\" class=\"data row9 col0\" >66.629101</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6c1b7_level0_row10\" class=\"row_heading level0 row10\" >Misc</th>\n",
-       "      <td id=\"T_6c1b7_row10_col0\" class=\"data row10 col0\" >66.619503</td>\n",
+       "      <th id=\"T_839d5_level0_row10\" class=\"row_heading level0 row10\" >Misc</th>\n",
+       "      <td id=\"T_839d5_row10_col0\" class=\"data row10 col0\" >66.619503</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6c1b7_level0_row11\" class=\"row_heading level0 row11\" >Adventure</th>\n",
-       "      <td id=\"T_6c1b7_row11_col0\" class=\"data row11 col0\" >65.331269</td>\n",
+       "      <th id=\"T_839d5_level0_row11\" class=\"row_heading level0 row11\" >Adventure</th>\n",
+       "      <td id=\"T_839d5_row11_col0\" class=\"data row11 col0\" >65.331269</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f98da283550>"
+       "<pandas.io.formats.style.Styler at 0x7fab9c1a7d30>"
       ]
      },
      "execution_count": 11,
@@ -34087,7 +34095,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
