--- a/Netology_stats_Power_Min_sample_size_HW.ipynb
+++ b/Netology_stats_Power_Min_sample_size_HW.ipynb
@@ -268,6 +268,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `Monte Carlo modeling of hypothesis testing`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {},
@@ -285,29 +293,34 @@
     }
    ],
    "source": [
-    "n_c = n_experiment = 16\n",
-    "total_trials = 10000\n",
-    "mu_c =100\n",
-    "mu_experiment = 105\n",
+    "n_c = n_experiment = 16 # number of observations in control group (CG)\n",
+    "total_trials = 10000    \n",
+    "mu_c =100               # mean of CG\n",
+    "mu_experiment = 105     # mean of EG\n",
+    "\n",
+    "# counters\n",
     "n_negative = 0\n",
     "true_positives = 0\n",
     "true_negatives = 0\n",
     "false_positives = 0\n",
     "false_negatives = 0\n",
+    "\n",
+    "# errors and rates\n",
     "FN, FP, TN, TP = 0,0,0,0\n",
     "error1 = 0\n",
     "error2 = 0\n",
     "\n",
+    "# trhesholds\n",
     "mu_exp_th = mu_experiment -  stats.norm.ppf((1+confidence)/2)* sigma_experiment / np.sqrt(n_experiment)\n",
     "mu_c_th = mu_c + stats.norm.ppf((1+confidence)/2) * sigma_c / np.sqrt(n_c)\n",
     "\n",
+    "#  iterations\n",
     "for i in range(total_trials):\n",
     "    control = np.random.normal(mu_c, sigma_c, n_c)\n",
     "    experiment = np.random.normal(mu_experiment, sigma_experiment, n_experiment)\n",
     "\n",
     "# H0: mu_c = mu_experiment  (actually not TRUE)\n",
     "# H1: mu_c != mu_experiment  (actually is TRUE)\n",
-    "\n",
     "\n",
     "\n",
     "    if control.mean() > mu_c_th: # error1\n",
@@ -403,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 (main, Nov 24 2022, 08:09:04) [Clang 14.0.6 ]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
