--- a/Netology_Pandas_functions_groupby.ipynb
+++ b/Netology_Pandas_functions_groupby.ipynb
@@ -1964,7 +1964,7 @@
     "# как передать несколько аргументов\n",
     "\n",
     "def find_text(row, str_):\n",
-    "    \"\"\"Возводит значение столбца effect в степень n\"\"\"\n",
+    "    \n",
     "    regex = r'.*' + str_ + '.*' \n",
     "    return re.findall(regex, row['phrase'])"
    ]
@@ -4377,7 +4377,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 64-bit (microsoft store)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -4391,11 +4391,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.1"
   },
   "vscode": {
    "interpreter": {
-    "hash": "62904c1132972672803069004015d497d78640672cb35a40da7f1355a4c1bbc5"
+    "hash": "1a1af0ee75eeea9e2e1ee996c87e7a2b11a0bebd85af04bb136d915cefc0abce"
    }
   }
  },
