--- a/Netology_math_LA_HW.ipynb
+++ b/Netology_math_LA_HW.ipynb
@@ -332,7 +332,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "base",
       "language": "python",
       "name": "python3"
     },
@@ -346,11 +346,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.1 (main, Dec 23 2022, 09:39:26) [Clang 14.0.0 (clang-1400.0.29.202)]"
+      "version": "3.9.13"
     },
     "vscode": {
       "interpreter": {
-        "hash": "1a1af0ee75eeea9e2e1ee996c87e7a2b11a0bebd85af04bb136d915cefc0abce"
+        "hash": "3f0fc0265faf3f010b6ea13d4d06fa8f6d9bd8f9a0a69886dc52220c62e8c74f"
       }
     }
   },
