--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -17,56 +17,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking for: ['power', 'HW'] in *.ipynb files\n",
+      "Looking for: ['express', 'go.Figure'] in *.ipynb files\n",
       "Incl. all occurrences: True\n",
       "Case sensitive: False\n",
       "File:          : Search result:\n",
       "................................................................................\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/Netology_stats_Practice_AB.ipynb\n",
-      "               : Power_of_a_test\\\">ст, HWnJVI1UY61lZEQ71NqJ, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/Netology_Python_FILES_Read_Write_and_pip_JSON.ipynb\n",
-      "               : power.csv\\t\\\\\\\\che-d, hwn\"},\"source\":[\"# В, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/Netology_stats_case_study_Darwinbooks_recommend.ipynb\n",
-      "               : PowerMovementPlants., hward',\\n\",\" 'contin, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/SEARCH.ipynb\n",
-      "               : power'] in ../**/*.i, HW_.ipynb         : , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/Netology_Pandas_JOIN_SQL_HW_.ipynb\n",
-      "               : power.csv\\n\",\n",
-      "      , HW Pandas\\n\",\n",
-      "    \"\\, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/math_sympy.ipynb\n",
-      "               : power SymPy\"\n",
-      "   ]\n",
-      "  , hWoBuXO4x3CwG7sUFx0+, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/Python_Tricks.ipynb\n",
-      "               : Power_MinSampleSize_, HW.ipynb\\n\",\"Constra, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/Netology_Pandas_basics.ipynb\n",
-      "               : power.csv')\\n\",\n",
-      "    , HW.ipynb\\n\",\n",
-      "      \", \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/Netology_stats_Data_Visualization_HW.ipynb\n",
-      "               : POwerUZMLAXDcJDqVAxg, HW we use dataset co, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/Netology_stats_A_B_testing_HW.ipynb\n",
-      "               : power of pokemon')\\n, hw4bhH9Cox8bGwdhZPim, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/NETOLOGY_PySpark_Лекция_7.ipynb\n",
-      "               : PowerIterationCluste, hwp3sPIoeUU/view?usp, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/ABD_22_Total_HW.ipynb\n",
-      "               : PowerTransformer, Ma, HWdxdh9rh0Ywui1MYaQ6, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/Netology_stats_Case_Power_MinSampleSize_HW.ipynb\n",
-      "               : power as smp\"\n",
-      "   ]\n",
-      " , hw4c/cFuj0YjevXvjxIk, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/Netology_stats_Power_Min_sample_size_W.ipynb\n",
-      "               : power as smp\"\n",
-      "   ]\n",
-      " , hw4c/cFuj0YjevXvjxIk, \n"
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/Netology_stats_Case_study_HW.ipynb\n",
+      "               : express as px\\n\",\n",
+      "  , go.Figure()\\n\",\n",
+      "    , \n"
      ]
     }
    ],
@@ -165,13 +131,13 @@
     "# rename_files_in_dir(\"path/to/dir\")\n",
     "\n",
     "# rename all files in current folder\n",
-    "rename_files_in_dir( os.getcwd() )"
+    "# rename_files_in_dir( os.getcwd() )"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -185,12 +151,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "3f0fc0265faf3f010b6ea13d4d06fa8f6d9bd8f9a0a69886dc52220c62e8c74f"
    }
   }
  },
