renaming files (concise)

--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -17,22 +17,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking for: ['express', 'go.Figure'] in *.ipynb files\n",
+      "Looking for: ['well'] in *.ipynb files\n",
       "Incl. all occurrences: True\n",
       "Case sensitive: False\n",
       "File:          : Search result:\n",
       "................................................................................\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netlogy/Netology_stats_Case_study_HW.ipynb\n",
-      "               : express as px\\n\",\n",
-      "  , go.Figure()\\n\",\n",
-      "    , \n"
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Netology_Pandas_JOIN_HW.ipynb\n",
+      "               : Welltory\\\\requiremen, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Netology_Python_FILES_Read_Write_and_pip_JSON.ipynb\n",
+      "               : Welltory\\n\"]}],\"sour, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Netology_stats_case_study_Darwinbooks_recommend.ipynb\n",
+      "               : well',\\n\",\" 'many',\\, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Netology_Pandas_PIVOT_and_PYMYSTEM.ipynb\n",
+      "               : Welltory\\n\"\n",
+      "     ]\n",
+      " , \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Netology_math_Numpy_Matrix.ipynb\n",
+      "               : wElLS1NAwcOVFhYmCIjI, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/DLS_simpsons_baseline.ipynb\n",
+      "               : WELlGsEFWhUQyHEaoSVK, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Netology_stats_Confidential_intervals_HW.ipynb\n",
+      "               : WeLLL78sdUiSMplM4urV, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Netology_Pandas_JOIN_SQL_HW_.ipynb\n",
+      "               : Welltory\\\\data_for_t, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Netology_stats_t_Tests.ipynb\n",
+      "               : welLVOurWveK52EtUo2W, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Netology_REGEX_practice.ipynb\n",
+      "               : WeLL/ogSa+a7Np08Zq/f, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Netology_stats_Data_Visualization_HW.ipynb\n",
+      "               : Weller – Copper Box , \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Netology_stats_A_B_testing_HW.ipynb\n",
+      "               : wellfiwtBL7uR/C18qJt, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_Total_HW.ipynb\n",
+      "               : wELlxSyNj4GJdffRHpWa, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/MathPlotLib_VIZ.ipynb\n",
+      "               : WElLCE4HuNCwmwzLoUpf, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Netology_Pandas_HW_funcs_group.ipynb\n",
+      "               : Welltory\\\\data_for_t, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Netology_math_LA_HW_7.ipynb\n",
+      "               : well', 'CG', 'BFGS',, \n"
      ]
     }
    ],
@@ -111,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +149,8 @@
     "\n",
     "def rename_files_in_dir(dir_path):\n",
     "    for count, filename in enumerate(os.listdir(dir_path)):\n",
-    "        new_filename = filename.replace(\"._\", \"_\")\n",
+    "        # new_filename = filename.replace(\"._\", \"_\")        \n",
+    "        new_filename = filename.replace(\"NETOLOGY_\", \"\")\n",
     "        # dst = \"file_\" + str(count) + \".ext\"\n",
     "        src = dir_path + '/' + filename\n",
     "        dst = dir_path + '/' + new_filename\n",
@@ -131,7 +162,7 @@
     "# rename_files_in_dir(\"path/to/dir\")\n",
     "\n",
     "# rename all files in current folder\n",
-    "# rename_files_in_dir( os.getcwd() )"
+    "rename_files_in_dir( os.getcwd() )"
    ]
   }
  ],
