--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -17,52 +17,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking for: ['well'] in *.ipynb files\n",
+      "Looking for: ['игрово'] in *.ipynb files\n",
       "Incl. all occurrences: True\n",
       "Case sensitive: False\n",
       "File:          : Search result:\n",
       "................................................................................\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Netology_Pandas_JOIN_HW.ipynb\n",
-      "               : Welltory\\\\requiremen, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Netology_Python_FILES_Read_Write_and_pip_JSON.ipynb\n",
-      "               : Welltory\\n\"]}],\"sour, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Netology_stats_case_study_Darwinbooks_recommend.ipynb\n",
-      "               : well',\\n\",\" 'many',\\, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Netology_Pandas_PIVOT_and_PYMYSTEM.ipynb\n",
-      "               : Welltory\\n\"\n",
-      "     ]\n",
-      " , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Netology_math_Numpy_Matrix.ipynb\n",
-      "               : wElLS1NAwcOVFhYmCIjI, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/DLS_simpsons_baseline.ipynb\n",
-      "               : WELlGsEFWhUQyHEaoSVK, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Netology_stats_Confidential_intervals_HW.ipynb\n",
-      "               : WeLLL78sdUiSMplM4urV, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Netology_Pandas_JOIN_SQL_HW_.ipynb\n",
-      "               : Welltory\\\\data_for_t, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Netology_stats_t_Tests.ipynb\n",
-      "               : welLVOurWveK52EtUo2W, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Netology_REGEX_practice.ipynb\n",
-      "               : WeLL/ogSa+a7Np08Zq/f, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Netology_stats_Data_Visualization_HW.ipynb\n",
-      "               : Weller – Copper Box , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Netology_stats_A_B_testing_HW.ipynb\n",
-      "               : wellfiwtBL7uR/C18qJt, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_Total_HW.ipynb\n",
-      "               : wELlxSyNj4GJdffRHpWa, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/MathPlotLib_VIZ.ipynb\n",
-      "               : WElLCE4HuNCwmwzLoUpf, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Netology_Pandas_HW_funcs_group.ipynb\n",
-      "               : Welltory\\\\data_for_t, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Netology_math_LA_HW_7.ipynb\n",
-      "               : well', 'CG', 'BFGS',, \n"
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/SCRAPING_PARSING.ipynb\n",
+      "               : игрового мира. Он со, \n"
      ]
     }
    ],
