--- a/math_LA_HW_8.ipynb
+++ b/math_LA_HW_8.ipynb
@@ -43,13 +43,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "RZ4QTueWHxyl"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Prob = 13.5%\n"
+          ]
+        }
+      ],
       "source": [
-        "### YOUR CODE/SOLUTION HERE"
+        "### YOUR CODE/SOLUTION HERE\n",
+        "supl_ = {\"a\":.2,\"b\":.3,\"c\":.5}\n",
+        "qual_ = {\"a\":.1,\"b\":.05,\"c\":.2}\n",
+        "prob = 0\n",
+        "for k,v in supl_.items():\n",
+        "    prob += v * qual_[k]\n",
+        "print(f\"Prob = {prob:.01%}\")"
       ]
     },
     {
@@ -139,17 +153,25 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "base",
       "language": "python",
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
-      "version": "3.11.1"
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.13"
     },
     "vscode": {
       "interpreter": {
-        "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+        "hash": "3f0fc0265faf3f010b6ea13d4d06fa8f6d9bd8f9a0a69886dc52220c62e8c74f"
       }
     }
   },
